# GMatElastoPlasticQPot

./: .appveyor.yml  .ci_environment_docs.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Cartesian2d_8hpp.html  Cartesian2d_8hpp_source.html  Cartesian2d__Array_8hpp.html  Cartesian2d__Array_8hpp_source.html  Cartesian2d__Cusp_8hpp.html  Cartesian2d__Cusp_8hpp_source.html  Cartesian2d__Elastic_8hpp.html  Cartesian2d__Elastic_8hpp_source.html  Cartesian2d__Smooth_8hpp.html  Cartesian2d__Smooth_8hpp_source.html  Cartesian3d_8h.html  Cartesian3d_8h_source.html  Cartesian3d_8hpp.html  Cartesian3d_8hpp.js  Cartesian3d_8hpp_source.html  Cartesian3d__Array_8hpp.html  Cartesian3d__Array_8hpp_source.html  Chunked_8hpp.html  Chunked_8hpp_source.html  GMatElastoPlasticQPot.pc.in  GMatElastoPlasticQPotConfig.cmake  GMatElastoPlasticQPotConfig.cmake.in  README.md  Redraw_8hpp.html  Redraw_8hpp_source.html  Static_8hpp.html  Static_8hpp_source.html  annotated.html  annotated_dup.js  classGMatElastic_1_1Cartesian3d_1_1Elastic-members.html  classGMatElastic_1_1Cartesian3d_1_1Elastic.html  classGMatElastoPlasticQPot_1_1Cartesian2d_1_1Array-members.html  classGMatElastoPlasticQPot_1_1Cartesian2d_1_1Array.html  classGMatElastoPlasticQPot_1_1Cartesian2d_1_1Array.js  (+180 more)
.github/workflows/: ci.yml  gh-pages.yml
docs/: api_cpp.rst  api_python.rst  conf.py  library.bib  readme.tex
docs/notes/: library.bib  readme.tex
docs/notes/figures/: planar-strain_2d.py  potential.py  strain-modes_2d_epseq.py
docs/theory/: readme.tex
docs/theory/figures/: strain-modes_2d_epseq.py  stress-strain.py
examples/: CMakeLists.txt  benchmark-array.cpp  benchmark-cusp.cpp  benchmark-epsd.cpp  benchmark-matrix.cpp  benchmark.cpp  friction-optimized.cpp  friction.cpp  friction.py
examples/v0.5.0/: CMakeLists.txt  benchmark-cusp.cpp  benchmark-epsd.cpp  benchmark-matrix.cpp  environment.yaml  friction-optimized.cpp  friction.cpp  friction.py
include/ElastoPlasticQPot/: Cartesian2d.h  Cartesian2d.hpp  Cartesian2d_Cusp.hpp  Cartesian2d_Elastic.hpp  Cartesian2d_Matrix.hpp  Cartesian2d_Smooth.hpp  ElastoPlasticQPot.h
include/GMatElastoPlasticQPot/: Cartesian2d.h  Cartesian2d.hpp  Cartesian2d_Array.hpp  Cartesian2d_Cusp.hpp  Cartesian2d_Elastic.hpp  Cartesian2d_Matrix.hpp  Cartesian2d_Smooth.hpp  Cartesian3d.h  GMatElastoPlasticQPot.h  config.h  python.cpp  version.h  version.hpp
include/xElastoPlasticQPot/: Cartesian2d.h  Cartesian2d.hpp  Cartesian2d_Cusp.hpp  Cartesian2d_Elastic.hpp  Cartesian2d_Matrix.hpp  Cartesian2d_Smooth.hpp  ElastoPlasticQPot.h  python.cpp
python/: main.cpp
python/GMatElastoPlasticQPot/: Cartesian2d.py  Cartesian3d.py  __init__.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  (+29 more)
test/: CMakeLists.txt  Cartesian2d.cpp  Cartesian2d.py
test/compare_versions/: Cartesian2d_check_main.py  Cartesian2d_check_master.py  Cartesian2d_check_v0.15.0.py  Cartesian2d_check_v0.2.2.py  Cartesian2d_check_v0.3.0.py  Cartesian2d_check_v0.5.0.py  Cartesian2d_check_v0.6.2.py  Cartesian2d_check_v0.6.3.py  Cartesian2d_generate.py
tests/: CMakeLists.txt  Cartesian2d.cpp  Cartesian2d.py  test_Cartesian2d.py  test_Cartesian3d.py  test_version.py
tests/compare_versions/: Cartesian2d_check_main.py  Cartesian2d_check_v0.2.2.py  Cartesian2d_check_v0.5.0.py  Cartesian2d_check_v0.6.3.py  Cartesian2d_generate.py
